--- a/Front/Css/styles.css
+++ b/Front/Css/styles.css
@@ -11,18 +11,19 @@ body {
 }
 
 header {
+    padding: 20px 0;
     text-align: center;
     margin-bottom: 20px;
     width: 100%;
-    padding: 20px;
 
-    background-color: azure;
+    background-color: rgb(199, 85, 222);
 }
 
 header h1 {
+    font-style: italic;
     font-size: 2.5rem;
-    color: #3498db;
-    padding-top: 50px ;
+    color: #ffffff;
+    padding-top: 10px ;
 }
     
 
